--- a/index.html
+++ b/index.html
@@ -8,19 +8,37 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <main>
-      <h1 class="title">Awesome Books</h1>
-      <ul class="book-ul">
-        
-      </ul>
-      <div class="book-form">
-        <form action="#" id="form">
-          <input type="text" class="title-input" placeholder="Title" /> <br />
-          <input type="text" class="author-input" placeholder="Author" /> <br />
-          <button class="add-btn" type="submit">Add</button>
+    <div class="container">
+      <h1 >
+        Awesome books</h1>
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Title</th>
+              <th>Author</th>
+              <th>ISBN#</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody id="book-list"></tbody>
+        </table>
+        <form id="book-form">
+          <div class="form-group">
+            <label for="title">Title</label>
+            <input type="text" id="title" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="author">Author</label>
+            <input type="text" id="author" class="form-control">
+          </div>
+          <div class="form-group">
+            <label for="isbn">ISBN#</label>
+            <input type="text" id="isbn" class="form-control">
+          </div>
+          <input type="submit" value="Add Book" class="btn ">
         </form>
-      </div>
-    </main>
+        
+    </div>
     <script src="./js/main.js"></script>
   </body>
 </html>
