--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <div class="container">
+    <div class="container center">
       <h1 >
         Awesome books</h1>
         <table class="table">
