--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Awesome Books</title>
-    <title>Awesome Books</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
@@ -20,7 +19,7 @@
         <form id="book-form">
           <h2 class="form-title center">Add a new book</h2>
           <div class="form-group">
-            <label for="title border-bottom md-5"></label>
+            <label for="title"></label>
             <input type="text" id="title" placeholder="Title" class="form-control border border-dark border-5 md-5 shadow-5-strong">
           </div>
           <div class="form-group">
