--- a/index.html
+++ b/index.html
@@ -1,71 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head >
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A awesome book library were you can add books to it and remove books from it.">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css"/>
     <title>Awesome Books</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/luxon@2.0.2/build/global/luxon.min.js"></script>
   </head>
-  <body>
-    <nav class="navbar navbar-expand-lg  bg-white border-secondary border mt-2 ">
-			<div class="container-fluid">
-				<a class="navbar-brand home" href="#">Awesome Books</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03"
-					aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-					<ul class="navbar-nav ms-auto">
-						<li class="nav-item ">
-							<a class="nav-link list-button border-end" href="#">
-								Book List
-							</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link add-new border-end" href="#">
-								New Book
-							</a>
-						</li>
-						<li class="nav-item add-contacts">
-							<a class="nav-link" href="#">
-								Contact
-							</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-    <div class="date "></div>
-    <div class="container center">
-      <h1 class="form-title center mb-2 fw-bold">All Awesome books</h1>
-        <table class="table">
-          <tbody id="book-list" class="book-list"></tbody>
-        </table>
-        <form id="book-form">
-          <h2 class="form-title center">Add a new book</h2>
-          <div class="form-group">
-            <label for="title"></label>
-            <input type="text" id="title" placeholder="Title" class="form-control border border-dark border-5 md-5 shadow-5-strong">
+  <body class="d-flex flex-column py-2 px-3">
+    <section class="d-flex flex-column align-items-end">
+      <nav class="d-flex justify-content-between border border-2 border-dark p-1 w-100">
+        <a id="nav-home" href="#" class="text-decoration-none text-dark fw-bold fs-6">Awesome Books</a>
+        <ul class="d-flex list-unstyled m-0 align-items-center">
+          <li><a id="nav-list" class="links text-decoration-none text-dark fs-6 fw-bold px-2" href="#">List</a></li>
+          <li><a id="nav-add" class="links text-decoration-none text-dark fs-6 fw-bold px-2" href="#">Add new</a></li>
+          <li><a id="nav-contact" class="text-decoration-none text-dark fs-6 fw-bold px-1" href="#">Contact</a></li>
+        </ul>
+      </nav>
+      <p id="date" class="date fw-bold mb-3"> Date</p>
+    </section>
+
+    <main class="d-flex justify-content-center">
+      <div class="d-flex flex-column align-items-center w-100">
+        <section id="section-list" class="d-flex flex-column align-items-center w-100">
+          <h1 class="mb-2 fw-bold">All awesome Books</h1>
+          <ul id="book-list" class="book-list list-unstyled border border-2 border-dark w-100">
+          </ul>
+        </section>
+        <section id="section-add" class="d-flex flex-column align-items-center w-75 d-none">
+          <h2 class="mb-2 fw-bold text-center">Add a new book</h2>
+          <form class="d-flex flex-column w-100">
+            <input
+              class="input mb-1 border border-2 border-dark px-1"
+              type="text"
+              name="title"
+              id="book-title"
+              placeholder="Title"
+            />
+            <input
+              class="input mb-1 border border-2 border-dark px-1"
+              type="text"
+              name="author"
+              id="book-author"
+              placeholder="Author"
+            />
+            <button id="add-book" class="add-book bg-white border border-2 border-dark px-1" type="submit">Add</button>
+          </form>
+        </section>
+        <section id="section-contact" class="d-none d-flex flex-column align-items-center fw-bold">
+          <h2 class="text-center fw-bold">Contact Information</h2>
+          <div class="contact-info d-flex flex-column align-items-center">
+            <p>Do you have any questions or just want to say hello? You can reach out to us</p>
+            <ul class="w-75">
+              <li>Brazilian Base:</li>
+              <li>Our email: mail@mail.com.br</li>
+              <li>Our Phone: +55 31 123456789</li>
+              <li>Our Address: Nameless Street, Numberless House, Brazil</li>
+            </ul>
+            <ul class="w-75">
+              <li>Colombia Base:</li>
+              <li>Our email: mail@mail.com.co</li>
+              <li>Our Phone: +57 313 1234567</li>
+              <li>Our Address: Nameless Street, Numberless House, Colombia</li>
+            </ul>
           </div>
-          <div class="form-group">
-            <label for="author"></label>
-            <input type="text" id="author" placeholder="Author" class="form-control border border-dark border-5 md-5 ">
-          </div>
-          <div class="form-group">
-            <label for="isbn"></label>
-            <input type="text" id="isbn" placeholder="ISBN#" class="form-control border border-dark border-5 md-5">
-          </div>
-          <div class="bnt-position">
-            <input type="submit" value="Add Book" class="btn border border-dark border-5 md-5 ">
-        </div>
-        </form>
-        
-    </div>
-    <script src="./js/date.js"></script>
-    <script src="./js/main.js"></script>
+        </section>
+      </div>
+    </main>
+    <footer class="border border-2 border-dark mt-auto px-1">
+      <h2 class="fs-6 fw-bold">Copyright &copy; 2014-<script>document.write(new Date().getFullYear())</script> Your Name All Rights Reserved</h2>
+    </footer>
+    <script type="module" src="main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
   </body>
 </html>
