ISBN Number and Remove function Fix

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
               id="book-author"
               placeholder="Author"
             />
+            <input
+              class="input mb-1 border border-2 border-dark px-1"
+              type="text"
+              name="isbn"
+              id="book-isbn"
+              placeholder="ISBN"
+            />
             <button id="add-book" class="add-book bg-white border border-2 border-dark px-1" type="submit">Add</button>
           </form>
         </section>
